--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-
-<%= render 'layouts/navbar' %>
-<%= yield %>
+  <div class="container">
+    <%= render 'layouts/navbar' %>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
