--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
+<% if user_signed_in? %>
+  <%= link_to "Add New Photo", new_photo_path %>
 
+  <h3>Here are your photos</h3>
+
+  <% current_user.photos.each do |photo| %>
+    <%= image_tag photo.file.url %>
+  <% end %>
+<% end %>
