--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,6 +5,7 @@
     </div>
     <ul class="nav navbar-nav pull-right">
       <% if user_signed_in? %>
+        <li><%= link_to "#{current_user.user_name}", user_path(current_user) %></li>
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
       <% else %>
