--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,4 +4,12 @@
   <%= link_to "#{image_tag(photo.file.url(:large))}".html_safe, photo_path(photo) %>
   <br>
   <p>Posted by: <%= photo.user.user_name %></p>
+  <% if photo.tags.any? %>
+    <p>
+      Tags:
+      <% photo.tags.each do |tag| %>
+        <em><%= tag.name %></em>
+      <% end %>
+    </p>
+  <% end %>
 <% end %>
