--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -3,6 +3,13 @@
 <%= image_tag "#{@photo.file.url(:large)}" %>
 <br>
 <br>
+
+<p>Tags:</p>
+<% @photo.tags.each do |tag| %>
+  <em><%= tag.name %></em>
+<% end %>
+<br>
+<br>
 <%= link_to "Add Comment", new_photo_comment_path(@photo), class: "btn btn-primary" %>
 
 <% @photo.comments.each do |comment| %>
